# foldy

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  build_and_deploy_containers.sh  dev_secrets_template.env  docker-compose.yml  foldy-in-a-box.yml  package-lock.json  pyrightconfig.json
backend/: .dockerignore  Dockerfile  README.md  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  requirements_312_WIP.txt  requirements_38.txt  rq_worker_main.py  rq_worker_settings.py  settings.py
backend/app/: api_fields.py  authorization.py  database.py  email_to.py  extensions.py  factory.py  metrics.py  models.py  util.py
backend/app/helpers/: boltz_yaml_helper.py  dna_build_util.py  esm_client.py  esm_util.py  fold_storage_manager.py  gpu_util.py  jobs_util.py  preference_ranking.py  rq_helpers.py  sequence_util.py
backend/app/jobs/: boltz_jobs.py  esm_jobs.py  evolve_jobs.py  other_jobs.py
backend/app/tests/: conftest.py  test_boltz_jobs.py  test_boltz_yaml_helper.py  test_esm_client.py  test_esm_finetuning.py  test_esm_jobs.py  test_esm_util.py  test_evolve_jobs.py  test_fold_storage_manager.py  test_mutation_util.py
backend/app/views/: admin_views.py  campaign_views.py  dna_build_views.py  dock_views.py  esm_views.py  few_shot_views.py  file_views.py  fold_views.py  login_views.py  open_views.py  other_views.py
backend/backend/: main.py  rq_worker_main.py  rq_worker_settings.py  settings.py
backend/backend/app/: admin_views.py  app.py  authorization.py  database.py  email_to.py  extensions.py  jobs.py  login_views.py  metrics.py  models.py  util.py  views.py
backend/backend/integration_tests/: conftest.py  test_database.py
backend/backend/rq/: worker.py
backend/folde/: README.md  __init__.py  campaign.py  data.py  few_shot_models.py  types.py  upload_data_to_gcs.sh  util.py  zero_shot_models.py
backend/folde/model_evals/: 250716-mse-to-bt_MLP-BT.json  250716-mse-to-bt_MLP-MSE.json  250716-mse-to-bt_RandomToRandomForest.json  250718-train-ablation_Random.json  250720-flip-aav_FolDE-base.json  250720-flip-aav_FolDE-low-vs-high-split.json  250720-flip-aav_FolDE-mut-des-split.json  250720-flip-aav_FolDE-noCL-two-vs-many-split.json  250720-flip-aav_FolDE-noZeroShot-two-vs-many-split.json  250720-flip-aav_FolDE-nowarmstart-two-vs-many-split.json  250720-flip-aav_FolDE-one-vs-many-split.json  250720-flip-aav_FolDE-seven-vs-many-split.json  250720-flip-aav_FolDE-two-vs-many-split.json  250720-flip-aav_RandomToRandomForest-base.json  250720-flip-aav_RandomToRandomForest-one-vs-many-split.json  250812-r1-explore-exploit-tensionV2_MLP-naturalnessZeroShot-natTraining-5epochs.json  250812-r1-explore-exploit-tensionV2_MLP-naturalnessZeroShot-natTraining.json  250812-r1-explore-exploit-tensionV2_MLP-naturalnessZeroShot.json  250812-r1-explore-exploit-tensionV2_MLP-randomZeroShot-natTraining.json  250812-r1-explore-exploit-tensionV2_MLP-randomZeroShot.json  250812-r1-explore-exploit-tensionV2_RandomForest-base.json  250812-r1-explore-exploit-tensionV2_RandomForest-naturalnessZeroShot.json  250823-domain-pooling-test_FolDE-base.json  250823-domain-pooling-test_FolDE-domainpooling-nowarmstart.json  250823-domain-pooling-test_FolDE-domainpooling.json  250823-domain-pooling-test_FolDE-nowarmstart.json  250823-domain-pooling-test_Random.json  250823-domain-pooling-test_RandomToRandomForest.json  250907-mse-to-bt_Random.json  250917_zero_shot_cl_Random.json  250922-one-away-multimutant-benchmark_Random.json  (+7 more)
backend/migrations/: env.py
backend/rq_util/: worker.py
backend/src/: autoapp.py  main.py  mypy.ini  pytest.ini  rq_worker_main.py  rq_worker_settings.py  settings.py  test_evolve.ipynb
(+495 files in other folders)
